# turboquant

./: .gitignore  README.md  action.yml  cache_optimizer.py  core.py  demo.py  pyproject.toml  setup.py  turboquant.py
.github/workflows/: example-quantize.yml
adapters/: README.md  __init__.py  _base.py  azure_blob.py  cassandra.py  chromadb.py  dynamodb.py  ehcache.py  elasticsearch.py  faiss.py  gcs.py  hazelcast.py  kafka.py  lmdb.py  memcached.py  milvus.py  mongodb.py  mysql.py  opensearch.py  pinecone.py  postgresql.py  qdrant.py  redis.py  rocksdb.py  s3.py  sqlite.py  weaviate.py
